--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,8 +5,8 @@
     height: 70px;
     width: 100%;
     padding: 1.5rem;
-    background-color: #eee;
-    color: black;
+    background-color: #3b444b;
+    color: rgb(35, 147, 207);
   }
   
   .cta {
