--- a/src/App.css
+++ b/src/App.css
@@ -20,15 +20,19 @@ html {
 }
 
 .container {
-  max-width: 90%;
+  max-width: 70%;
   margin-right: auto;
   margin-left: auto;
   padding: 1rem;
 }
-
+.contLogin
+{
+  width: -webkit-fill-available;
+  margin-left: 24%;
+}
 .content {
   /* border: 1px solid black; */
-  height: 80vh;
+  /* height: 80vh; */
   display: flex;
   justify-content: center;
 }
